# heptabrain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTRO_ZH.md  LICENSE  LICENSE-code  LICENSE-docs  README.md  pyproject.toml
.claude/commands/: heptabrain-sync.md  kb-restructure.md  zettel-eval.md  zettel-walk.md
.github/ISSUE_TEMPLATE/: bug.md  port-report.md  spec-critique.md
docs/: 01-cyberbrain-architecture.md  02-heptabrain-sync.md  03-zettel-walk.md  04-heptabrain-propose-links.md  IMPLEMENTATION_PLAN_PHASE_0_1.md
examples/: walk-observation-as-intervention.md
examples/memory/: MEMORY.md  README.md  _heptabase_refs.json  _heptabrain_registry.json  feedback_example.md  project_example.md  reference_example.md  user_example.md
registry-schemas/: discovered_links.schema.json  discovered_links.v2.schema.json  heptabrain_registry.schema.json  whiteboard_maturity.schema.json
scripts/constants/: relation_types.py
scripts/registry/: atomic_write.py  lifecycle.py  migration.py  schema.py  whiteboard_maturity.py
setup/: install.sh
skills/: heptabrain-sync.md  kb-restructure.md  zettel-eval.md  zettel-walk.md
specs/: DEV_SPEC_CYBERBRAIN_ARCHITECTURE.md  DEV_SPEC_HEPTABRAIN_SYNC.md  DEV_SPEC_ZETTEL_WALK.md
tests/: test_atomic_write.py  test_lifecycle.py  test_migration.py  test_registry_schema.py  test_relation_types.py  test_whiteboard_maturity.py
