[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heptabrain"
version = "0.1.0"
description = "Cyberbrain v3.0.1 — Knowledge operating system on Heptabase"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20",
    "scikit-learn>=1.4",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
